Fix wrapping issue on iPhones

--- a/content/themes/airwptheme/css/dev/global.css
+++ b/content/themes/airwptheme/css/dev/global.css
@@ -2713,6 +2713,7 @@ pre {
   align-items: center;
   color: #f0fafb;
   display: flex;
+  white-space: nowrap;
 }
 
 .site-title a .solid {
